--- a/apps/this-film-finder/src/index.html
+++ b/apps/this-film-finder/src/index.html
@@ -2,12 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>this-film-finder</title>
+    <title>This film finder</title>
     <base href="/" />
+    <meta name="referrer" content="origin" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <meta name="google" content="notranslate" />
+    <meta name="robots" content="notranslate" />
   </head>
   <body>
     <this-film-finder-root></this-film-finder-root>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@latest/dist/ionicons/ionicons.esm.js"
+    ></script>
   </body>
 </html>
