check if index and app component work in netlify

--- a/apps/this-film-finder/src/index.html
+++ b/apps/this-film-finder/src/index.html
@@ -11,7 +11,8 @@
     <meta name="robots" content="notranslate" />
   </head>
   <body>
-    <this-film-finder-root></this-film-finder-root>
+    <p>Index works</p>
+    <this-film-finder-root> </this-film-finder-root>
     <script
       type="module"
       src="https://unpkg.com/ionicons@latest/dist/ionicons/ionicons.esm.js"
