--- a/apps/this-film-finder/src/index.html
+++ b/apps/this-film-finder/src/index.html
@@ -6,7 +6,7 @@
     <base href="/" />
     <meta name="referrer" content="origin" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <meta name="google" content="notranslate" />
     <meta name="robots" content="notranslate" />
   </head>
